objects/tractionguest__Guest__c.object
<CustomObject>
    <description>The record used to capture employee, visitor, or contractor details</description>
    <fields>
        <fullName>tractionguest__Company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tractionguest__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Guests</relationshipLabel>
        <relationshipName>Guests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tractionguest__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>tractionguest__First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tractionguest__Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tractionguest__Latest_Visit__c</fullName>
        <label>Latest Visit</label>
        <summarizedField>tractionguest__Guest_Event__c.CreatedDate</summarizedField>
        <summaryForeignKey>tractionguest__Guest_Event__c.tractionguest__Guest__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>tractionguest__Total_Visits__c</fullName>
        <label>Total Visits</label>
        <summaryForeignKey>tractionguest__Guest_Event__c.tractionguest__Guest__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Guest</label>
    <listViews>
        <fullName>tractionguest__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>G-{00000}</displayFormat>
        <label>Guest Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Guests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>